# personal_portfolio_assistant

backend/: .gitignore  pyproject.toml
backend/app/: main.py  test_intent_route.py  test_state_manager.py
backend/app/agents/: contact_agent.py  greeting_agent.py  rag_agent.py
backend/app/conversation/: manager.py  state_manager.py
backend/app/core/: config.py  dependencies.py
backend/app/knowledge/: about.md  ai_projects.md  contact.md  experience.md  faq.md  frontend_projects.md  fullstack_projects.md  profile.md  services.md  skills.md
backend/app/models/: chat.py  state.py
backend/app/prompts/: system_prompt.py
backend/app/routes/: chat.py  conversation.py  health.py  intent_router.py
backend/app/services/: ai_service.py  chat_service.py  chat_utils.py  embedding_service.py  ingestion_service.py  knowledge_service.py  rag_service.py  retrieval_service.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: ChatBot.tsx
frontend/lib/: api.ts
